Fix heading overflow on mobile

--- a/src/Styles/typography.less
+++ b/src/Styles/typography.less
@@ -1,8 +1,3 @@
-// .root {
-//   font-size: 18px;
-//   line-height: 23px;
-// }
-
 .article {
   font-size: 1em;
   line-height: 1.27777778em;
@@ -44,6 +39,45 @@
     margin-top: 1.27777778em;
     margin-bottom: 0em;
   }
+  // Scale down slightly on smaller devices:
+  @media screen and (max-width: 700px) {
+    h1,
+    .h1 {
+      font-size: 51px;
+      line-height: 64px;
+      margin-top: 16px;
+      margin-bottom: 32px;
+    }
+    h2,
+    .h2 {
+      font-size: 31px;
+      line-height: 32px;
+      margin-top: 16px;
+      margin-bottom: 16px;
+    }
+    h3,
+    .h3 {
+      font-size: 19px;
+      line-height: 32px;
+      margin-top: 16px;
+      margin-bottom: 0px;
+    }
+    h4,
+    .h4 {
+      font-size: 12px;
+      line-height: 16px;
+      margin-top: 16px;
+      margin-bottom: 0px;
+    }
+    h5,
+    .h5 {
+      font-size: 12px;
+      line-height: 16px;
+      margin-top: 16px;
+      margin-bottom: 0px;
+    }
+  }
+
   p,
   ul,
   ol,
